Tests/CompilerTests/positive/context-bound.hylo
//! stage:typing no-std

trait P { fun f() }

struct A<T> {
  var x: T
}

given <T is P> A<T> is P {
  fun f() { self.x.f() }
}

fun g<T is P>(_ x: T) {
  x.f()
}
