Tests/CompilerTests/negative/ambiguous-overload.hylo
//! no-std

struct A {}
struct B {}

fun f(_ x: A) {}
fun f(_ x: B) {}

fun g() {
  f(x: ())
}
